<resources>
    <string name="app_name">Reverse Polish Notation Calculator</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="result">Result : </string>
    <string name="stack_size">Stack size : </string>
    <string name="input">Input : </string>
    <string name="ac">AC</string>
    <string name="swap">&#8646;</string>
    <string name="drop">DROP</string>
    <string name="_8">8</string>
    <string name="divideButtonText">&#247;</string>
    <string name="changeMark">+/-</string>
    <string name="multiplicationButton">&#8727;</string>
    <string name="sqrtButton">&#8730;</string>
    <string name="subtractButton">&#8722;</string>
    <string name="powerButton">&#94;</string>
    <string name="dotButton">.</string>
    <string name="enterButton">&#8648;</string>
    <string name="addButton">&#43;</string>
    <string name="fourthRowStack">4:</string>
    <string name="thirdRowStack">3:</string>
    <string name="secondRowStack">2:</string>
    <string name="firstRowStack">1:</string>
    <string name="change_background_color">Change background color</string>
    <string name="back_to_main">Back to main</string>
    <string name="change_buttons_color">Change buttons color</string>
    <string name="change_text_color">Change text color</string>
    <string name="accuracy_1">Accuracy : 2</string>
    <string name="default_settings">Default settings</string>
    <string name="settingsString">settingsImg</string>
    <string name="undo">&#5589;</string>
    <string name="arithmetic_buttons_colors">Arithmetic buttons colors</string>
    <string name="numbers_button_colors">numbers button colors</string>
    <string name="change_ac_button_color">change ac button color</string>
</resources>