<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calculatorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorView">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:id="@+id/resultLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:height="50dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/result"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                android:typeface="serif" />

            <TextView
                android:id="@+id/firstStackLabel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/resultLabel"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:text="@string/firstRowStack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/secondStackLabel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/firstStackLabel"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:text="@string/secondRowStack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/thirdStackLabel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/secondStackLabel"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:gravity="center_vertical"
                android:text="@string/thirdRowStack"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fourthStackLabel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@+id/thirdStackLabel"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:gravity="center_vertical"
                android:text="@string/fourthRowStack"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/fourthStackLabel"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/stackSizeField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/stack_size"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/inputField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/input"
                    android:textSize="20sp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </LinearLayout>
        </RelativeLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonAc"
                    style="@style/buttonStyle"
                    android:shadowRadius="10"
                    android:text="@string/ac"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonSwap"
                    style="@style/buttonStyle"
                    android:text="@string/swap"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonDrop"
                    style="@style/buttonStyle"
                    android:text="@string/drop"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonEnter"
                    style="@style/buttonStyle"
                    android:text="@string/enterButton"
                    app:backgroundTint="@null" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <Button
                    android:id="@+id/button7"
                    style="@style/buttonStyle"
                    android:text="@string/_7"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/button8"
                    style="@style/buttonStyle"
                    android:text="@string/_8"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/button9"
                    style="@style/buttonStyle"
                    android:text="@string/_9"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonDiv"
                    style="@style/buttonStyle"
                    android:text="@string/divideButtonText"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonChangeCharacter"
                    style="@style/buttonStyle"
                    android:text="@string/changeMark"
                    app:backgroundTint="@null" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <Button
                    android:id="@+id/button4"
                    style="@style/buttonStyle"
                    android:text="@string/_4"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/button5"
                    style="@style/buttonStyle"
                    android:text="@string/_5"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/button6"
                    style="@style/buttonStyle"
                    android:text="@string/_6"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonMultiplication"
                    style="@style/buttonStyle"
                    android:text="@string/multiplicationButton"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonSqrt"
                    style="@style/buttonStyle"
                    android:text="@string/sqrtButton"
                    app:backgroundTint="@null" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <Button
                    android:id="@+id/button1"
                    style="@style/buttonStyle"
                    android:text="@string/_1"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/button2"
                    style="@style/buttonStyle"
                    android:text="@string/_2"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/button3"
                    style="@style/buttonStyle"
                    android:text="@string/_3"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonMinus"
                    style="@style/buttonStyle"
                    android:text="@string/subtractButton"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonPower"
                    style="@style/buttonStyle"
                    android:text="@string/powerButton"
                    app:backgroundTint="@null" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="207dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/button0"
                    style="@style/buttonStyle"
                    android:text="@string/_0"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonDot"
                    style="@style/buttonStyle"
                    android:text="@string/dotButton"
                    app:backgroundTint="@null" />

                <Button
                    android:id="@+id/buttonPlus"
                    style="@style/buttonStyle"
                    android:text="@string/addButton"
                    app:backgroundTint="@null" />

                <ImageButton
                    android:id="@+id/settingsButton"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:backgroundTint="#00FFFFFF"
                    android:contentDescription="@string/settingsString"
                    app:srcCompat="@mipmap/settings_icon_foreground" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>